# AI-Rahman

./: INSTALL.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
musicgen_interpretation/: __init__.py  cli.py  data_processing.py  linear_probes.py  main.py  musicgen_hooks.py
test/: musicgen-interp-update.ipynb  probe-training-update.ipynb  steering_musicgen-update.ipynb
